fix: grammar fix

--- a/docs/tutorials/create-a-package-in-monorepo.mdx
+++ b/docs/tutorials/create-a-package-in-monorepo.mdx
@@ -88,7 +88,7 @@ The content of the package looks as shown below:
 (...)
 ```
 
-As you can see from the above-mentioned example, a package can be at the root level for example, `my-package` or grouped in a folder for example `packages`.
+As you can see from the above-mentioned example, a package can be at the root level, for example, `my-package`, or grouped in a folder for example `packages`.
 In this tutorial, we use the latter.
 
 Enough with the theory, let’s dig in.
@@ -101,7 +101,7 @@ Packages are just regular NPM packages, or in other words, folders with their ow
 
 Let's create a folder called `greeting` inside `packages`.
 Now that we've created our new folder, let's initialize a new package in it.
-For that we need to create a `package.json` file inside that folder.
+For that, we need to create a `package.json` file inside that folder.
 
 You can add it manually or use the following command inside the newly created folder:
 
@@ -146,13 +146,13 @@ Now that we've initialized a new package, let's start by adding a couple of file
 ```json
 ├── packages
 |   |   // This is our new package
-│   └── gretting
+│   └── greeting
 │       │ // All the source code for the React component will be in this folder.
 │       ├── src
 │       │   └── index.tsx
 │       ├── // A configuration file for babel. More on that later
 │       ├── .babelrc.js
-│       ├── // A text file about package
+│       ├── // A text file about the package
 │       ├── README.md
 │       ├── // This file is used to give information to npm;
 │       ├── // that allows it to identify the package as well as handle the package's dependencies
@@ -240,12 +240,12 @@ After that, we add the following scripts inside the `package.json` file:
 
 #### `scripts`
 - [`build`](https://github.com/webiny/webiny-examples/blob/master/iframe-page-element/packages/iFrameElement/package.json#L37):
-it removes the content of `dist` folder and compile the source code via `babel` and run the `postbuild` command.
+it removes the content of the `dist` folder and compiles the source code via `babel` and runs the `postbuild` command.
 - [`watch`](https://github.com/webiny/webiny-examples/blob/master/iframe-page-element/packages/iFrameElement/package.json#L38):
-it run the `babel` compiler in `watch` mode, which means the latest changes will compile automatically as source file content changes.
+it runs the `babel` compiler in `watch` mode, which means the latest changes will compile automatically as source file content changes.
 - [`postbuild`](https://github.com/webiny/webiny-examples/blob/master/iframe-page-element/packages/iFrameElement/package.json#L39):
-as name suggest, it runs after the completion of the `build` command.
-We use it to copy the meta files like `package.json`, `README.md` into `dist` folder and compile typescript code.
+as the name suggests, it runs after the completion of the `build` command.
+We use it to copy the meta files like `package.json`, `README.md` into the `dist` folder and compile typescript code.
 
 After adding `script` the `package.json` file look as shown below:
 
@@ -320,7 +320,7 @@ Now let's take a look at the `.babelrc.js` file which is a configuration file fo
 
 :::info
 Babel is a JavaScript compiler. We need it because:
-- we're writing the `React` code in `JSX` syntax which need to be converted in `JS`
+- we're writing the `React` code in `JSX` syntax which needs to be converted in `JS`
 - we're also using the latest JavaScript features and syntax which are not supported in all browsers, therefore, need to be converted
 :::
 
@@ -374,7 +374,7 @@ To use the package we need to `build` it first.
 **"And how do we do that?"** you may ask, remember we added the `build` command under the `scripts` key inside the `package.json` file of the package.
 Now it's time we use it.
 
-We can simply `cd` into the package folder that is `packages/greeting` and run:
+We can simply `cd` into the package folder which is `packages/greeting` and runs:
 
 ```
 yarn build
