--- a/docs/how-to-guides/upgrade-webiny/overview.mdx
+++ b/docs/how-to-guides/upgrade-webiny/overview.mdx
@@ -7,20 +7,37 @@ description: Learn how to upgrade your Webiny project.
 ---
 
 :::tip What you’ll learn
-
 - what does it mean to upgrade Webiny
 - how to upgrade Webiny to a specific version
 :::
 
+## 🔥 Precaution Measures
+
+### Pre-production Environments First
+
+Whenever you're doing an upgrade, we recommended that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`. Once you've confirmed everything works as expected, then you can start planning moving into the production.
+
+:::info
+Learn how to deploy your project into multiple environments with the [`deploy`](http://localhost:3000/docs/how-to-guides/deployment/deploy-your-project) command.
+:::
+
+### Production Data Backups
+
+When deploying to production environments, in order to prevent data loss, make sure to **backup data stored in your [ElasticSearch](https://docs.aws.amazon.com/elasticsearch-service/latest/developerguide/es-managedomains-snapshots.html) and [DynamoDB](https://docs.aws.amazon.com/amazondynamodb/latest/developerguide/Backups.html) databases**!
+
+If you have any additional questions or concerns, please don't hesitate to send us a message via our [community Slack channel](https://www.webiny.com/slack).
+
 ## How to Upgrade
 
-:::caution
+:::info
 The following guide does not apply if you're interested in doing a major version upgrade, for example upgrading from version 4 to version 5.
 :::
 
-> When planning an upgrade, always check if there's a dedicated article for your specific Webiny version. All the articles are located in the menu on the left. For example: `5.0.0-beta.4 to 5.0.0`. If you see the article that matches your versions, follow it. These dedicated articles contain additional steps to upgrade your Webiny project, as sometimes there are changes in project file organization, project configs, etc.
+:::caution
+When planning an upgrade, always check if there's a dedicated article for your specific Webiny version. All the articles are located in the menu on the left. For example: `5.0.0-beta.4 to 5.0.0`. If you see the article that matches your versions, follow it. These dedicated articles contain additional steps to upgrade your Webiny project, as sometimes there are changes in project file organization, project configs, etc.
+:::
 
-If there's no dedicated article, upgrades are as easy as upgrading all the `@webiny/*` packages to the desired version. 
+If there's no dedicated article, upgrades are as easy as upgrading all the `@webiny/*` packages to the desired version.
 
 Since every Webiny project is using [yarn](https://yarnpkg.com/) as the package manager, to upgrade all `@webiny/*` packages, you can use the [`yarn up`](https://yarnpkg.com/cli/up) command, like so:
 
@@ -34,8 +51,8 @@ The `yarn up` command updates all your `package.json` files in all workspaces ac
 :::
 
 <!-- vale off -->
-Once that's done, you can deploy your project.
 
+Once that's done, you can deploy your project.
 
 ## FAQ
 
