--- a/docs/how-to-guides/upgrade-webiny/5.0.0-to-5.0.1.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.0.0-to-5.0.1.mdx
@@ -21,9 +21,17 @@ Before continuing, make sure to take the necessary precautions, listed in the [O
 
 ## Update Pulumi Infrastructure Code
 
-### Add missing private subnet for the ElasticSearch cluster
+The following changes apply only to the **production** setup of the **API** project application's cloud infrastructure.
 
-The following change applies only for your production setup of the **API** project application's cloud infrastructure.
+:::info
+
+Note that the cloud infrastructure, defined within the **API** project application, is defined as two different setups - **development** and **production**.
+
+Read more about it in our [Cloud Infrastructure](/docs/key-topics/cloud-infrastructure/api/introduction#different-cloud-infrastructure-setups) key topic.
+
+:::
+
+### Add missing private subnet for the ElasticSearch cluster
 
 Open your [`api/pulumi/prod/elasticSearch.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/pulumi/prod/elasticSearch.ts) file, and on [line 26](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/pulumi/prod/elasticSearch.ts#L26), add the `vpc.subnets.private[1].id` subnet to the `subnetIds` array:
 
