fix: update metadata

--- a/docs/how-to-guides/upgrade-webiny/5.0.0-to-5.0.1.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.0.0-to-5.0.1.mdx
@@ -2,8 +2,8 @@
 id: 5.0.0-to-5.0.1
 title: 5.0.0 to 5.0.1
 sidebar_label: 5.0.0 to 5.0.1
-keywords: ["webiny", "version", "upgrade"]
-description: Learn how to upgrade Webiny from 5.0.0-beta.4 to 5.0.0.
+keywords: ["webiny", "version", "upgrade", "5.0.0", "5.0.1"]
+description: Learn how to upgrade Webiny from 5.0.0 to 5.0.1.
 ---
 
 import CenteredImage from "../../mdxComponents/centeredImage";
