fix: use title case

--- a/docs/how-to-guides/upgrade-webiny/5.0.0-to-5.0.1.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.0.0-to-5.0.1.mdx
@@ -31,7 +31,7 @@ Read more about it in our [Cloud Infrastructure](/docs/key-topics/cloud-infrastr
 
 :::
 
-### Add missing private subnet for the ElasticSearch cluster
+### Add Missing Private Subnet For the ElasticSearch Cluster
 
 Open your [`api/pulumi/prod/elasticSearch.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/pulumi/prod/elasticSearch.ts) file, and on [line 26](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/pulumi/prod/elasticSearch.ts#L26), add the `vpc.subnets.private[1].id` subnet to the `subnetIds` array:
 
@@ -67,7 +67,7 @@ this.domain = new aws.elasticsearch.Domain(
 );
 ```
 
-### Optionally, mark mission-critical resources as protected
+### Optionally, Mark Mission Critical Resources as Protected
 
 In order to prevent accidental deletions of mission critical cloud infrastructure resources, the Pulumi framework allows us to mark a resource as protected, via the `protect` property.
 
