fix: update title and improve upon feedback

--- a/docs/tutorials/create-a-package-in-monorepo.mdx
+++ b/docs/tutorials/create-a-package-in-monorepo.mdx
@@ -1,14 +1,14 @@
 ---
-id: create-a-package-in-monorepo
-title: How to Create a Package in Monorepo
-sidebar_label: Create a Package in Monorepo
+id: create-a-package-in-webiny-project
+title: How to Create a Package in a Webiny Project
+sidebar_label: Create a Package in a Webiny Project
 keywords: ["package", "workspaces", "monorepo", "organization of files"]
-description: Learn how to share code by creating a package in monorepo
+description: Learn how to share code by creating a package in a Webiny project
 ---
 
 :::tip What You’ll Learn
-- how to create a new package in monorepo
-- how to organize files in monorepo
+- how to create a new package in a Webiny project
+- how to organize files in a Webiny project
 :::
 
 ## Overview
@@ -17,7 +17,7 @@ We often need to share code between multiple packages in our project.
 Every Webiny project consists of packages and project applications, you can learn more about them in our [key topics](/docs/key-topics/project-organization/project-applications-and-packages) section.
 :::
 Every Webiny project is organized as a [monorepo](/docs/key-topics/project-organization/monorepo-organization).
-In this tutorial, you will learn how to organize and share code between multiple packages in a monorepo.
+In this tutorial, you will learn how to organize and share code between multiple packages in a Webiny project.
 Let's get started.
 
 ## What We'll Build
@@ -88,14 +88,14 @@ The content of the package looks as shown below:
 (...)
 ```
 
-As you can see from the above-mentioned example, a package can be at the root level, for example, `my-package`, or grouped in a folder for example `packages`.
+As you can see from the above-mentioned example, a package can be at the root level, for example, `apps/theme`, or grouped in a folder for example `packages/*`.
 In this tutorial, we use the latter.
 
 ### Initialize the Package
 
 Enough with the theory, let’s dive in and initialize the package.
 
-First, create a folder called `packages` where we add our custom package.
+First, create a folder called `packages` inside the root of your project where we add our custom package.
 
 :::info
 Packages are just regular NPM packages, or in other words, folders with their own package.json
@@ -440,7 +440,7 @@ In our case, `packages/greeting`.
 
 ### Install the Package
 Now that we've built the package. It's time to install and link the package.
-Run the following command:
+Run the following command from the root of your project:
 ```
 yarn install
 ```
@@ -450,6 +450,7 @@ Because using [`postinstall`](https://github.com/webiny/webiny-examples/blob/mas
 ### Using the Package in Apps
 
 After completing all these steps you can now simply import and use it as a regular npm package.
+You can import and use this newly created package in any application or any other package inside the same Webiny project.
 
 ```ts
 import WelcomeMessage from "@examples/greeting";
@@ -459,7 +460,7 @@ import WelcomeMessage from "@examples/greeting";
 
 Congratulations!! 🎉🥳
 
-You've successfully created a new package in monorepo.
+You've successfully created a new package in a Webiny project.
 Monorepo organization makes it possible to structure different logical pieces of your project as multiple packages.
 
 You can also check out a similar code example in our [repo](https://github.com/webiny/webiny-examples/tree/master/create-package-in-monorepo).
