wip: create Headless CMS GraphQL API docs

--- a/docs/how-to-guides/headless-cms/create-a-webiny-headless-cms-field-plugin.mdx
+++ b/docs/how-to-guides/headless-cms/create-a-webiny-headless-cms-field-plugin.mdx
@@ -1,7 +1,7 @@
 ---
 id: create-a-webiny-headless-cms-field-plugin
-title: Create a Webiny Headless CMS field plugin
-sidebar_label: Create a field plugin
+title: Create a Webiny Headless CMS Field Plugin
+sidebar_label: Create a Field Plugin
 keywords: ["webiny", "serverless", "headless cms", "graphql", "reactjs"]
 description: How to create a new field plugin for Webiny Headless CMS application? We need to create both UI and API field plugins, which we go through in this guide.
 ---
