fix: more updates

--- a/docs/tutorials/create-a-package-in-monorepo.mdx
+++ b/docs/tutorials/create-a-package-in-monorepo.mdx
@@ -22,7 +22,7 @@ Let's get started.
 
 ## What We'll Build
 In this tutorial, we'll be building a package that contains a simple React component and see how we can share it between multiple packages.
-But, you can create a package for backend code as well using similar principles.
+The same principles apply to Node.js packages you would use in your API.
 
 Here is the file structure of the package we're about to build:
 ```
@@ -67,7 +67,7 @@ Before we continue, let's quickly cover the workspaces list, located in the `pac
 
 The content of the package looks as shown below:
 
-```
+```title="package.json"
 (...)
 "workspaces": {
     "packages": [
@@ -88,7 +88,7 @@ The content of the package looks as shown below:
 (...)
 ```
 
-As you can see from the above-mentioned example, a package can be at the root level, for example, `apps/theme`, or grouped in a folder for example `packages/*`.
+As you can see from the example above, a package can be at the root level, for example, `apps/theme`, or grouped in a folder for example `packages/*`.
 In this tutorial, we use the latter.
 
 ### Initialize the Package
@@ -127,7 +127,7 @@ Once we execute the above command, we will be presented with a couple of questio
 You can also run `yarn init -y` to use sensible defaults.
 :::
 
-Depending upon your inputs the generated `package.json` file's content may look similar to the following:
+Depending on your input, the generated `package.json` file's content may look similar to the following:
 
 ```json
 {
@@ -149,21 +149,20 @@ Now that we've initialized a new package, let's start by adding a couple of file
 
 ```json
 ├── packages
-|   |   // This is our new package
+|   |   // This is our new package.
 │   └── greeting
 │       │ // All the source code for the React component will be in this folder.
 │       ├── src
 │       │   └── index.tsx
-│       ├── // A configuration file for babel. More on that later
+│       ├── // A configuration file for babel. More on that later.
 │       ├── .babelrc.js
-│       ├── // A text file about the package
+│       ├── // A text file about the package.
 │       ├── README.md
-│       ├── // This file is used to give information to npm;
-│       ├── // that allows it to identify the package as well as handle the package's dependencies
+│       ├── // This file holds various metadata relevant to the package.
 │       ├── package.json
-│       ├── // A configuration file of the TypeScript compiler (tsc)
+│       ├── // A configuration file of the TypeScript compiler (tsc) used when package is being built.
 │       ├── tsconfig.build.json
-│       └── // A configuration file of the TypeScript compiler (tsc)
+│       └── // A configuration file for Typescript compiler used by your IDE.
 │       └── tsconfig.json
 └── yarn.lock
 
@@ -190,10 +189,10 @@ Here we're creating a very simple React component. But, you can write whatever l
 Now that we have our desired code in place. We can move to the next step which is adding the required configuration files.
 
 To build our package, we need to add the following configuration files:
-- [`package.json`](#packagejson): This file is used to give information to [npm](http://npmjs.com/) that allows it to identify the package as well as handle the package's dependencies.
-- [`.babelrc.js`](#babelrcjs): A configuration file for babel.
-- [`tsconfig.json`](#tsconfigjson):  A configuration file of the TypeScript compiler (tsc).
-- `tsconfig.build.json`  A configuration file of the TypeScript compiler (tsc).
+- [`package.json`](#packagejson)
+- [`.babelrc.js`](#babelrcjs)
+- [`tsconfig.json`](#tsconfigjson)
+- `tsconfig.build.json`
 
 Let's create them one by one.
 
@@ -235,14 +234,14 @@ You can find out the full example code used in this tutorial in our [repo](https
 Let's quickly discuss all of them:
 
 #### `dependencies`
-The dependencies value is used to specify any other modules that a given module (represented by the package.json) requires to work.
+This field defines other packages (dependencies) we will use in the code.
 
 In our case we need the following:
 - [`react`](https://www.npmjs.com/package/react): React is a JavaScript library for creating user interfaces..
 - [`react-dom`](https://www.npmjs.com/package/react-dom): Serves as the entry point to the DOM and server renderers for React.
 
 #### `devDependencies`
-The devDependencies value is used to specific the packages that are only needed for local development and testing.
+This value is used to specify the packages that are only needed for local development and testing.
 
 In our case we need the following:
 - [`@babel/cli`](https://www.npmjs.com/package/@babel/cli): Babel command line.
@@ -303,6 +302,7 @@ After adding `script` the `package.json` file look as shown below:
 
 And finally, we add `publishConfig` which is a set of configuration values, usually used for package publishing purposes.
 But, in our case, this is what enables us to import our newly created package from other packages in different project applications.
+Webiny uses this to link your package in node_modules with the appropriate target folder, which will be `dist` once the package is built.
 
 :::info
 The proper linking of packages is established via the built-in `link-workspaces` command, defined in your root `package.json` file.
@@ -350,8 +350,8 @@ Now let's take a look at the `.babelrc.js` file which is a configuration file fo
 
 :::info
 Babel is a JavaScript compiler. We need it because:
-- we're writing the `React` code in `JSX` syntax which needs to be converted in `JS`
-- we're also using the latest JavaScript features and syntax which are not supported in all browsers, therefore, need to be converted
+- we're writing the `React` code in `JSX` syntax which needs to be converted to `JS`
+- we're also using the latest JavaScript features and syntax which are not supported in all browsers, and therefore, need to be converted
 :::
 
 In the `.babelrc.js` we just export the `.babel.react` configuration file which is defined in the project root.
@@ -413,9 +413,9 @@ We can simply `cd` into the package folder which is `packages/greeting` and runs
 ```
 yarn build
 ```
-And it will work just fine. But, as your project grows and you add more packages. It becomes a chore to run the same command across multiple packages.
+And it will work just fine. But, as your project grows and you add more packages, it becomes a chore to run the same command across multiple packages.
 
-Webiny CLI provides the workspaces run (or ws run for short) command that enables you to run single command across multiple workspaces at once.
+Webiny CLI provides the `workspaces run` (or `ws run` for short) command that enables you to run a single command across multiple workspaces at once.
 The common use case where this might be needed is local development, where you want to watch for code changes on multiple packages, and rebuild them accordingly.
 
 :::info
